--- a/index.html
+++ b/index.html
@@ -1,35 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <style>
-            body {
-                background-color: black;
-                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
-            #login {
-                color: white;
-                background-color: black;
-                border-color: purple;
-            }
-            #signup {
-                color: white;
-                background-color: black;
-                border-color: purple;
-            }
-            .login {
-                background-color: black;
-                color: white;
-                border-color: purple;
-            }
-            .signup {
-                background-color: black;
-                color: white;
-                border-color: purple;
-            }
-            form {
-                border-color: purple;
-            }
-        </style>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <form>
